[gd_scene load_steps=4 format=2]

[ext_resource path="res://test.gd" type="Script" id=1]
[ext_resource path="res://ttf.tres" type="DynamicFont" id=2]
[ext_resource path="res://pocket.png" type="Texture" id=3]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1032.0
margin_bottom = 605.0
color = Color( 0.584314, 0.729412, 0.494118, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="has" type="Label" parent="."]
margin_left = 438.391
margin_top = 13.0435
margin_right = 490.391
margin_bottom = 39.0435
custom_fonts/font = ExtResource( 2 )
text = "has?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="state" type="Label" parent="."]
margin_left = 514.842
margin_top = 12.4482
margin_right = 564.842
margin_bottom = 38.4482
custom_fonts/font = ExtResource( 2 )
text = "状态"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GetPlugin" type="Button" parent="VBoxContainer"]
margin_right = 240.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 2 )
text = "获得插件单例"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="showRewardVideoAd" type="Button" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 240.0
margin_bottom = 68.0
custom_fonts/font = ExtResource( 2 )
text = "奖励视频广告测试"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="init" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 240.0
margin_bottom = 104.0
custom_fonts/font = ExtResource( 2 )
disabled = true
text = "手动初始化sdk"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "不能在引擎层初始化，必须在安卓层Application类初始化"
}

[node name="showInter" type="Button" parent="VBoxContainer"]
margin_top = 108.0
margin_right = 240.0
margin_bottom = 140.0
custom_fonts/font = ExtResource( 2 )
text = "静态插屏广告测试"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="showFullAd" type="Button" parent="VBoxContainer"]
margin_top = 144.0
margin_right = 240.0
margin_bottom = 176.0
custom_fonts/font = ExtResource( 2 )
text = "全屏广告测试"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="showBanner" type="Button" parent="VBoxContainer"]
margin_top = 180.0
margin_right = 240.0
margin_bottom = 212.0
custom_fonts/font = ExtResource( 2 )
text = "横幅广告测试banner"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="showNativeAd" type="Button" parent="VBoxContainer"]
margin_top = 216.0
margin_right = 240.0
margin_bottom = 248.0
custom_fonts/font = ExtResource( 2 )
text = "信息流广告测试"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 250.706
margin_top = 60.2348
margin_right = 893.706
margin_bottom = 86.2348
custom_fonts/font = ExtResource( 2 )
text = "不能在引擎层初始化，必须在安卓层Application类初始化"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pocket" type="Sprite" parent="."]
position = Vector2( 879.485, 27.2444 )
texture = ExtResource( 3 )

[connection signal="pressed" from="VBoxContainer/GetPlugin" to="." method="_on_GetPlugin_pressed"]
[connection signal="pressed" from="VBoxContainer/showRewardVideoAd" to="." method="_on_showRewardVideoAd_pressed"]
[connection signal="pressed" from="VBoxContainer/showInter" to="." method="_on_showInter_pressed"]
[connection signal="pressed" from="VBoxContainer/showFullAd" to="." method="_on_showFullAd_pressed"]
[connection signal="pressed" from="VBoxContainer/showBanner" to="." method="_on_showBanner_pressed"]
[connection signal="pressed" from="VBoxContainer/showNativeAd" to="." method="_on_showNativeAd_pressed"]
